
CHANGES IN VERSION 0.1.2

NEW FEATURES
  
  - `dp_generate_fielddescriptor` now generates correct meta data for objects
    of type `code` from the `codelist` package.

  - `dp_categorieslist` returns the code list from a `code` object from the
    `codelist` package.

  - `dp_type()` and `dp_type<-()` added for Field Descriptor to get and set 
    the field type.

BUG FIXES

  - [Bug fix]
