@@ -22,8 +22,8 @@ check_constraint_minimum <- function(x, fielddescriptor) {
   name <- fielddescriptor$name
   if (!is.null(constraints) && !is.null(constraints$minimum)) {
     minimum <- constraints$minimum
-    if (!is.numeric(minimum) || length(minimum) != 1 || is.na(minimum)) {
-      paste0("Constraint minimum for '", name, "' is not a numeric of length  1.")
+    if (length(minimum) != 1 || is.na(minimum)) {
+      paste0("Constraint minimum for '", name, "' is missing or not of length  1.")
     } else if (!all(x >= minimum, na.rm = TRUE)) {
       paste0("'", name, "' contains values smaller than minimum.")
     } else TRUE
@@ -35,8 +35,8 @@ check_constraint_maximum <- function(x, fielddescriptor) {
   name <- fielddescriptor$name
   if (!is.null(constraints) && !is.null(constraints$maximum)) {
     maximum <- constraints$maximum
-    if (!is.numeric(maximum) || length(maximum) != 1 || is.na(maximum)) {
-      paste0("Constraint maximum for '", name, "' is not a numeric of length  1.")
+    if (length(maximum) != 1 || is.na(maximum)) {
+      paste0("Constraint maximum for '", name, "' is missing or not of length  1.")
     } else if (!all(x <= maximum, na.rm = TRUE)) {
       paste0("'", name, "' contains values larger than maximum.")
     } else TRUE
@@ -48,8 +48,8 @@ check_constraint_exclusiveminimum <- function(x, fielddescriptor) {
   name <- fielddescriptor$name
   if (!is.null(constraints) && !is.null(constraints$exclusiveMinimum)) {
     minimum <- constraints$exclusiveMinimum
-    if (!is.numeric(minimum) || length(minimum) != 1 || is.na(minimum)) {
-      paste0("Constraint exclusiveMinimum for '", name, "' is not a numeric of length  1.")
+    if (length(minimum) != 1 || is.na(minimum)) {
+      paste0("Constraint exclusiveMinimum for '", name, "' is missing or not of length 1.")
     } else if (!all(x > minimum, na.rm = TRUE)) {
       paste0("'", name, "' contains values smaller than exclusiveMinimum.")
     } else TRUE
@@ -61,8 +61,8 @@ check_constraint_exclusivemaximum <- function(x, fielddescriptor) {
   name <- fielddescriptor$name
   if (!is.null(constraints) && !is.null(constraints$exclusiveMaximum)) {
     maximum <- constraints$exclusiveMaximum
-    if (!is.numeric(maximum) || length(maximum) != 1 || is.na(maximum)) {
-      paste0("Constraint exclusiveMaximum for '", name, "' is not a numeric of length  1.")
+    if (length(maximum) != 1 || is.na(maximum)) {
+      paste0("Constraint exclusiveMaximum for '", name, "' is missing or not of length  1.")
     } else if (!all(x < maximum, na.rm = TRUE)) {
       paste0("'", name, "' contains values larger than exclusiveMaximum.")
     } else TRUE
