@@ -49,40 +49,54 @@ fd2 <- list(name="foo", type="integer")
 expect_nistrue(datapackage:::check_integer(fx, fd2))
 
 # INTEGER: Constraints
-x <- c(1,3,1,NA)
 fd <- list(name="foo", type="integer", constraints = list(minimum = 2))
-expect_nistrue(datapackage:::check_integer(x, fd))
-expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
-
 x <- c(1,3,1,NA)
+expect_nistrue(datapackage:::check_integer(x, fd))
+expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
+x <- c(2,3,2,NA)
+expect_istrue(datapackage:::check_integer(x, fd))
+
 fd <- list(name="foo", type="integer", constraints = list(maximum = 2))
+x <- c(1,3,1,NA)
 expect_nistrue(datapackage:::check_integer(x, fd))
 expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
+x <- c(1,2,1,NA)
+expect_istrue(datapackage:::check_integer(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="integer", constraints = list(unique = TRUE))
+x <- c(1,NA,3,1,NA)
 expect_nistrue(datapackage:::check_integer(x, fd))
 expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
+x <- c(1,3,NA)
+expect_istrue(datapackage:::check_integer(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="integer", constraints = list(required = TRUE))
+x <- c(1,NA,3,1,NA)
 expect_nistrue(datapackage:::check_integer(x, fd))
 expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
+x <- c(1,4,3,1)
+expect_istrue(datapackage:::check_integer(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="integer", constraints = list(exclusiveMaximum = 3))
+x <- c(1,NA,3,1,NA)
 expect_nistrue(datapackage:::check_integer(x, fd))
 expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
+x <- c(1,NA,2,1,NA)
+expect_istrue(datapackage:::check_integer(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="integer", constraints = list(exclusiveMinimum = 1))
-expect_nistrue(datapackage:::check_integer(x, fd))
-expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
-
 x <- c(1,NA,3,1,NA)
-fd <- list(name="foo", type="integer", constraints = list(enum = c(2,3)))
 expect_nistrue(datapackage:::check_integer(x, fd))
 expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
+x <- c(2,NA,3,2,NA)
+expect_istrue(datapackage:::check_integer(x, fd))
+
+fd <- list(name="foo", type="integer", constraints = list(enum = c(2,3)))
+x <- c(1,NA,3,1,NA)
+expect_nistrue(datapackage:::check_integer(x, fd))
+expect_istrue(datapackage:::check_integer(x, fd, constraints = FALSE))
+x <- c(2,NA,3,2,NA)
+expect_istrue(datapackage:::check_integer(x, fd))
 
 x <- c(1,3,1,NA)
 fd <- list(name="foo", type="integer", constraints = list(minimum = 2, maximum = 2))
@@ -109,40 +123,54 @@ fd <- list(name = "foo", type = "integer")
 expect_nistrue(datapackage:::check_number(1:3, fd))
 
 # NUMBER: Constraints
-x <- c(1,3,1,NA)
 fd <- list(name="foo", type="number", constraints = list(minimum = 2))
-expect_nistrue(datapackage:::check_number(x, fd))
-expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
-
 x <- c(1,3,1,NA)
+expect_nistrue(datapackage:::check_number(x, fd))
+expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
+x <- c(2,3,2,NA)
+expect_istrue(datapackage:::check_number(x, fd))
+
 fd <- list(name="foo", type="number", constraints = list(maximum = 2))
+x <- c(1,3,1,NA)
 expect_nistrue(datapackage:::check_number(x, fd))
 expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
+x <- c(1,2,1,NA)
+expect_istrue(datapackage:::check_number(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="number", constraints = list(unique = TRUE))
+x <- c(1,NA,3,1,NA)
 expect_nistrue(datapackage:::check_number(x, fd))
 expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
+x <- c(1,3,2,NA)
+expect_istrue(datapackage:::check_number(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="number", constraints = list(required = TRUE))
+x <- c(1,NA,3,1,NA)
 expect_nistrue(datapackage:::check_number(x, fd))
 expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
+x <- c(1,3,1,4)
+expect_istrue(datapackage:::check_number(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="number", constraints = list(exclusiveMaximum = 3))
+x <- c(1,NA,3,1,NA)
 expect_nistrue(datapackage:::check_number(x, fd))
 expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
+x <- c(1,NA,2,1,NA)
+expect_istrue(datapackage:::check_number(x, fd))
 
-x <- c(1,NA,3,1,NA)
 fd <- list(name="foo", type="number", constraints = list(exclusiveMinimum = 1))
-expect_nistrue(datapackage:::check_number(x, fd))
-expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
-
 x <- c(1,NA,3,1,NA)
-fd <- list(name="foo", type="number", constraints = list(enum = c(2,3)))
 expect_nistrue(datapackage:::check_number(x, fd))
 expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
+x <- c(2,NA,3,2,NA)
+expect_istrue(datapackage:::check_number(x, fd))
+
+fd <- list(name="foo", type="number", constraints = list(enum = c(2,3)))
+x <- c(1,NA,3,1,NA)
+expect_nistrue(datapackage:::check_number(x, fd))
+expect_istrue(datapackage:::check_number(x, fd, constraints = FALSE))
+x <- c(2,NA,3,2,NA)
+expect_istrue(datapackage:::check_number(x, fd))
 
 x <- c(1,3,1,NA)
 fd <- list(name="foo", type="number", constraints = list(minimum = 2, maximum = 2))
@@ -165,20 +193,26 @@ fd <- list(name = "foo", type = "number")
 expect_nistrue(datapackage:::check_string(c("a", "c", "b", NA), fd))
 
 # STRING: Constraints
-x <- c("a",NA,"c","a",NA)
 fd <- list(name="foo", type="string", constraints = list(unique = TRUE))
+x <- c("a",NA,"c","a",NA)
 expect_nistrue(datapackage:::check_string(x, fd))
 expect_istrue(datapackage:::check_string(x, fd, constraints = FALSE))
+x <- c("a","c",NA)
+expect_istrue(datapackage:::check_string(x, fd))
 
-x <- c("a",NA,"c","a",NA)
 fd <- list(name="foo", type="string", constraints = list(required = TRUE))
-expect_nistrue(datapackage:::check_string(x, fd))
-expect_istrue(datapackage:::check_string(x, fd, constraints = FALSE))
-
 x <- c("a",NA,"c","a",NA)
-fd <- list(name="foo", type="string", constraints = list(enum = c("b", "c")))
 expect_nistrue(datapackage:::check_string(x, fd))
 expect_istrue(datapackage:::check_string(x, fd, constraints = FALSE))
+x <- c("a","c","a")
+expect_istrue(datapackage:::check_string(x, fd))
+
+fd <- list(name="foo", type="string", constraints = list(enum = c("b", "c")))
+x <- c("a",NA,"c","a",NA)
+expect_nistrue(datapackage:::check_string(x, fd))
+expect_istrue(datapackage:::check_string(x, fd, constraints = FALSE))
+x <- c("b",NA,"c","b",NA)
+expect_istrue(datapackage:::check_string(x, fd))
 
 x <- c("a",NA,"c","a",NA)
 fd <- list(name="foo", type="string", constraints = list(unique = TRUE, enum = c("b", "c")))
@@ -200,23 +234,29 @@ fd <- list(name = "foo", type = "number")
 expect_nistrue(datapackage:::check_boolean(c("a", "c", "b", NA), fd))
 
 # BOOLEAN: Constraints
-x <- c(TRUE, NA, FALSE, TRUE, NA)
 fd <- list(name="foo", type="boolean", constraints = list(unique = TRUE))
+x <- c(TRUE, NA, FALSE, TRUE, NA)
 expect_nistrue(datapackage:::check_boolean(x, fd))
 expect_istrue(datapackage:::check_boolean(x, fd, constraints = FALSE))
+x <- c(TRUE, FALSE, NA)
+expect_istrue(datapackage:::check_boolean(x, fd))
 
-x <- c(TRUE, NA, FALSE, TRUE, NA)
 fd <- list(name="foo", type="boolean", constraints = list(required = TRUE))
+x <- c(TRUE, NA, FALSE, TRUE, NA)
 expect_nistrue(datapackage:::check_boolean(x, fd))
 expect_istrue(datapackage:::check_boolean(x, fd, constraints = FALSE))
+x <- c(TRUE, FALSE, TRUE)
+expect_istrue(datapackage:::check_boolean(x, fd))
 
+fd <- list(name="foo", type="boolean", constraints = list(enum = c(TRUE)))
 x <- c(TRUE, NA, FALSE, TRUE, NA)
-fd <- list(name="foo", type="boolean", constraints = list(enum = c("b", "c")))
 expect_nistrue(datapackage:::check_boolean(x, fd))
 expect_istrue(datapackage:::check_boolean(x, fd, constraints = FALSE))
+x <- c(TRUE, NA, TRUE, NA)
+expect_istrue(datapackage:::check_boolean(x, fd))
 
 x <- c(TRUE, NA, FALSE, TRUE, NA)
-fd <- list(name="foo", type="boolean", constraints = list(unique = TRUE, enum = c("b", "c")))
+fd <- list(name="foo", type="boolean", constraints = list(unique = TRUE, enum = c(TRUE)))
 y <- datapackage:::check_boolean(x, fd)
 expect_equal(is.character(y), TRUE)
 expect_equal(length(y), 2)
@@ -238,44 +278,130 @@ fd <- list(name = "foo", type = "integer")
 expect_nistrue(datapackage:::check_date(1:3, fd))
 
 # DATE: Constraints
-x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 fd <- list(name="foo", type="date", constraints = list(minimum = as.Date("2024-01-04")))
+x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 expect_nistrue(datapackage:::check_date(x, fd))
 expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
+x <- as.Date(c("2024-01-04","2024-03-23","2024-01-04",NA))
+expect_istrue(datapackage:::check_date(x, fd))
 
+fd <- list(name="foo", type="date", constraints = list(maximum = as.Date("2024-03-20")))
 x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
-fd <- list(name="foo", type="date", constraints = list(maximum = as.Date("2024-01-02")))
 expect_nistrue(datapackage:::check_date(x, fd))
 expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
+x <- as.Date(c("2024-01-02","2024-03-20","2024-01-02",NA))
+expect_istrue(datapackage:::check_date(x, fd))
 
-x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 fd <- list(name="foo", type="date", constraints = list(unique = TRUE))
+x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 expect_nistrue(datapackage:::check_date(x, fd))
 expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
+x <- as.Date(c("2024-01-02","2024-03-23","2024-01-03",NA))
+expect_istrue(datapackage:::check_date(x, fd))
 
-x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 fd <- list(name="foo", type="date", constraints = list(required = TRUE))
+x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 expect_nistrue(datapackage:::check_date(x, fd))
 expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
+x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02"))
+expect_istrue(datapackage:::check_date(x, fd))
 
-x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 fd <- list(name="foo", type="date", constraints = list(exclusiveMaximum = as.Date("2024-03-23")))
+x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 expect_nistrue(datapackage:::check_date(x, fd))
 expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
+x <- as.Date(c("2024-01-02","2024-03-22","2024-01-02",NA))
+expect_istrue(datapackage:::check_date(x, fd))
 
-x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 fd <- list(name="foo", type="date", constraints = list(exclusiveMinimum = as.Date("2024-01-02")))
-expect_nistrue(datapackage:::check_date(x, fd))
-expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
-
 x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
-fd <- list(name="foo", type="date", constraints = list(enum = as.Date(c("2024-02-01", "2024-01-02"))))
 expect_nistrue(datapackage:::check_date(x, fd))
 expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
+x <- as.Date(c("2024-01-03","2024-03-23","2024-01-03",NA))
+expect_istrue(datapackage:::check_date(x, fd))
+
+fd <- list(name="foo", type="date", constraints = list(enum = as.Date(c("2024-02-01", "2024-01-02"))))
+x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
+expect_nistrue(datapackage:::check_date(x, fd))
+expect_istrue(datapackage:::check_date(x, fd, constraints = FALSE))
+x <- as.Date(c("2024-01-02","2024-02-01","2024-01-02",NA))
+expect_istrue(datapackage:::check_date(x, fd))
 
 x <- as.Date(c("2024-01-02","2024-03-23","2024-01-02",NA))
 fd <- list(name="foo", type="date", constraints = list(required = TRUE, unique = TRUE))
 y <- datapackage:::check_date(x, fd)
+expect_equal(is.character(y), TRUE)
+expect_equal(length(y), 2)
+
+# =============================================================================
+# DATETIME: Basic without constraints
+fd <- list(name = "foo", type = "datetime")
+expect_istrue( datapackage:::check_datetime(
+    as.POSIXct("2024-01-01 12:13:14", "2024-03-01 00:03:03", "2024-02-01 23:23:23", NA), fd))
+expect_istrue( datapackage:::check_datetime(NA, fd))
+expect_istrue( datapackage:::check_datetime(as.POSIXct(character(0)), fd))
+expect_istrue(datapackage:::check_datetime(as.POSIXlt("2024-01-01 16:45"), fd))
+expect_nistrue(datapackage:::check_datetime("3", fd))
+expect_istrue( datapackage:::check_datetime(logical(0), fd))
+expect_nistrue(datapackage:::check_datetime(TRUE, fd))
+
+# Check for correct type in fielddescriptor
+fd <- list(name = "foo", type = "integer")
+expect_nistrue(datapackage:::check_datetime(1:3, fd))
+
+# DATETIME: Constraints
+fd <- list(name="foo", type="datetime", constraints = list(minimum = as.POSIXct("2024-01-02 14:00:00")))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_nistrue(datapackage:::check_datetime(x, fd))
+expect_istrue(datapackage:::check_datetime(x, fd, constraints = FALSE))
+x <- as.POSIXct(c("2024-01-02 14:00:00","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_istrue(datapackage:::check_datetime(x, fd))
+
+fd <- list(name="foo", type="datetime", constraints = list(maximum = as.POSIXct("2024-03-23 00:03:00")))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_nistrue(datapackage:::check_datetime(x, fd))
+expect_istrue(datapackage:::check_datetime(x, fd, constraints = FALSE))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:00","2024-01-02 23:23:23",NA))
+expect_istrue(datapackage:::check_datetime(x, fd))
+
+fd <- list(name="foo", type="datetime", constraints = list(unique = TRUE))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 12:13:14",NA))
+expect_nistrue(datapackage:::check_datetime(x, fd))
+expect_istrue(datapackage:::check_datetime(x, fd, constraints = FALSE))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 12:13:15",NA))
+expect_istrue(datapackage:::check_datetime(x, fd))
+
+fd <- list(name="foo", type="datetime", constraints = list(required = TRUE))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_nistrue(datapackage:::check_datetime(x, fd))
+expect_istrue(datapackage:::check_datetime(x, fd, constraints = FALSE))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 23:23:23"))
+expect_istrue(datapackage:::check_datetime(x, fd))
+
+fd <- list(name="foo", type="datetime", constraints = list(exclusiveMaximum = as.POSIXct("2024-03-23 00:03:03")))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_nistrue(datapackage:::check_datetime(x, fd))
+expect_istrue(datapackage:::check_datetime(x, fd, constraints = FALSE))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:02","2024-01-02 23:23:23",NA))
+expect_istrue(datapackage:::check_datetime(x, fd))
+
+fd <- list(name="foo", type="datetime", constraints = list(exclusiveMinimum = as.POSIXct("2024-01-02 12:13:14")))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_nistrue(datapackage:::check_datetime(x, fd))
+expect_istrue(datapackage:::check_datetime(x, fd, constraints = FALSE))
+x <- as.POSIXct(c("2024-01-02 12:13:15","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_istrue(datapackage:::check_datetime(x, fd))
+
+fd <- list(name="foo", type="datetime", constraints = list(enum = as.POSIXct(c("2024-01-02 12:13:14", "2024-01-02 23:23:23"))))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 23:23:23",NA))
+expect_nistrue(datapackage:::check_datetime(x, fd))
+expect_istrue(datapackage:::check_datetime(x, fd, constraints = FALSE))
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-01-02 12:13:14","2024-01-02 23:23:23",NA))
+expect_istrue(datapackage:::check_datetime(x, fd))
+
+x <- as.POSIXct(c("2024-01-02 12:13:14","2024-03-23 00:03:03","2024-01-02 12:13:14",NA))
+fd <- list(name="foo", type="datetime", constraints = list(required = TRUE, unique = TRUE))
+y <- datapackage:::check_datetime(x, fd)
 expect_equal(is.character(y), TRUE)
 expect_equal(length(y), 2)
 
